# strace

./: Makefile.am  NEWS  bootstrap  configure.ac  execve.c  strace.spec.in  term.c
tests/: .gitignore  Makefile.am  gen_tests.in  pure_executables.list
tools/: Makefile.am
tools/asinfo/: Makefile.am  arch_includes.h  arch_interface.c  arch_interface.h  arch_personalities.h  asinfo.1.in  asinfo.c  dispatchers.c  dispatchers.h  error_interface.c  error_interface.h  gen_asinfo_files.sh  request_msgs.h  syscall_interface.c  syscall_interface.h
tools/asinfo/tests/: Makefile.am  init.sh  ref_asinfo_output.h
